# digiTwin

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/extraction/: pipeline.py  schema.py  schema_registry.py
backend/app/graph_schema/: constraints.cypher  indexes.cypher
backend/app/llm/: __init__.py  base.py  gemini_provider.py
backend/app/models/: api.py  artifact.py  graph.py  permissions.py  resolution.py
backend/app/prompts/: extract_audio_video.txt  extract_commits.txt  extract_decisions.txt  extract_policy.txt  extract_prd.txt  extract_relationships.txt  extract_repo.txt  generate_resolution_plan.txt  synthesize_answer.txt
backend/app/routers/: actions.py  artifacts.py  chatbot.py  graph.py  ingest.py  permissions.py  query.py  resolution.py  webhooks.py  ws.py
backend/app/services/: analytics_service.py  artifact_classifier.py  artifact_router.py  chatbot_service.py  diff_service.py  execution_service.py  graph_service.py  ingestion_service.py  job_service.py  permission_service.py  pii_service.py  pipeline_runner.py  planner_service.py  resolution_event_service.py  resolution_service.py  retrieval_service.py  risk_service.py
backend/app/services/adapters/: __init__.py  audio_video_adapter.py  base.py  document_adapter.py  generic_adapter.py  github_adapter.py  transcript_adapter.py
backend/tests/eval/: citation_faithfulness.py  extraction_accuracy.py  gold_set.py  permission_correctness.py
data/: demo_graph.json  (+2 more)
(+92 files in other folders)
