[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "digitwin-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "neo4j>=5.18",
    "neo4j-graphrag>=1.0",
    "google-genai>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pypdf>=4.0",
    "rocketride>=1.0.6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
